# StSRLSolver

./: .cleanup-placeholder  .gitignore  .spire-monitor.json  AGENT.md  AGENTS.md  AUDIT.md  AUDIT_PROMPT.md  CLAUDE.md  HARNESS_SCOPE.md  OVERNIGHT_PROMPT.md  README.md  REPO_CANONICAL.md  REVIEW.md  SPEC-core-engine-cleanup.md  SPEC-tracelab-record-mode.md  TODO.md  WAVE2_PROMPT.md  WAVE3B_PROMPT.md  WAVE3_PROMPT.md  agent.py  bc_agent.py  cli.py  collect_self_play_data.py  launch_game.sh  main.py  monitor_selfplay.sh  package.json  process_nov2020.py  pyproject.toml  run_agent.sh  run_collector.sh  run_overnight.sh  run_search_server.py  run_selfplay.sh  run_vacation_selfplay.sh  self_play_trainer.py  start_training.sh  switch_mode.sh  test_seeds.py  train_bc.py  (+2 more)
.claude/: launch.json
archive/: README.md
assets/: manifest.json
core/: __init__.py  api.py  combat.py  combat_engine.py  damage.py  game.py  game.py.backup
docs/: ARCHITECTURE.md  AUDIT-2026-04-11.md  CLAUDE-data.md  CLAUDE-reference.md  CLAUDE-training.md  COMPLETED.md  GAME_STATE_AUDIT.md  IMPLEMENTATION_SPEC.md  QUICK_REFERENCE.md  REMAINING-WORK.md  RL_TRAINING_PLAN.md  TODO.md  TOOLS.md  UI_PLAN.md  architecture-overview.md  canonical-status-keys.md  codex-optimization-audit.md  m4-system-config.md  remaining-work-scoped.md  training-log-shape.md
legacy_tests/: README.md
mod/: dependency-reduced-pom.xml  pom.xml
models/: __init__.py  bc_model.py  combat_calculator.py  encoding.py  enemy_database.py
python/: __init__.py  annotation_tool.py  baalorlord_scraper.py  data_sources.py  ev_calculator.py  shop_probabilities.py  transcript_extractor.py  vod_extractor.py  watcher_mechanics.py
reference/: README.md
scripts/: analyze_vods.py  app.sh  audit-setup.sh  build.sh  build_and_launch.sh  check_patches.sh  check_state.py  codex-review.sh  commands.sh  continuous_training.sh  decompile_java.sh  dev.sh  dev_game.sh  extract.sh  extract_content.py  generate_parity_manifests.py  generate_power_manifest.py  gpt54-review.sh  hotfix.sh  launch.sh  ledger.sh  log_watcher.py  monitor.py  nightly-audit.sh  parse_game_log.py  pause.sh  play.sh  play_gui.sh  play_record.sh  pretrain_combat.py  pretrain_value_head.py  push_metrics.py  record_play.sh  refresh_decompiled_ref.py  run_dashboard.py  run_tests.py  services.sh  start-training.sh  start.sh  sts.py  (+18 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: conftest.py  test_agent_actions.py  test_agent_api.py  test_agent_readiness.py  test_ascension.py  test_ascension_audit.py  test_audit_bosses.py  test_audit_cards_attack.py  test_audit_cards_skill.py  test_audit_damage.py  test_audit_events.py  test_audit_gameloop.py  test_audit_inventory_manifest.py  test_audit_power_defensive.py  test_audit_power_dispatch.py  test_audit_power_manifest.py  test_audit_relics_cardplay.py  test_audit_relics_combat.py  test_audit_stances.py  test_auxiliary_heads.py  test_behavioral_core.py  test_boss_split_fix.py  test_card_audit.py  test_cards.py  test_combat.py  test_combat_engine.py  test_combat_engine_audit_bugs.py  test_combat_mechanics_audit.py  test_coverage_boost.py  test_damage.py  test_defect_card_verification.py  test_defect_cards.py  test_effects_and_combat.py  test_encounter_combat_integration.py  test_enemies.py  test_enemy_ai.py  test_enemy_ai_parity.py  test_enemy_full_audit.py  test_engine_parity_tail.py  test_events.py  (+51 more)
tools/: __init__.py  game_viewer.py  launcher.py  test_engine.py
ui/: __init__.py  app.py  game_ui.py
vod/: __init__.py  card_name_validator.py  chunker.py  debug_floor8.py  detect_seed.py  extract_full_run.py  extraction_tools_v2.py  handlers.py  micro_chunker.py  orchestrator.py  reanalyze_extraction.py  run_extraction.py  state.py  (+8 more)
(+740 files in other folders)
