[package]
name = "slay-the-spire-rl-viewer"
version = "0.1.0"
description = "Slay the Spire RL Viewer - Native Desktop App"
authors = ["Jack Switzer"]
edition = "2021"

[lib]
name = "slay_the_spire_rl_viewer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
